Fix issue that caused hero banner cover text to be highlighted and underlined on hover in high contrast mode. Fix issue with the styling of horizontal rules in flex containers.

--- a/assets/css/_high-contrast.scss
+++ b/assets/css/_high-contrast.scss
@@ -55,7 +55,10 @@ body.high-contrast .hero-banner {
     border-bottom: 3px solid var(--hc-border);
 }
 
-body.high-contrast .hero-cover-text,
+body.high-contrast .hero-cover-text {
+    color: var(--hc-text);
+}
+
 body.high-contrast .navbar li a {
     color: var(--hc-text);
 
