--- a/assets/css/_utilities.scss
+++ b/assets/css/_utilities.scss
@@ -23,6 +23,6 @@
 }
 
 hr.divider-short {
-    width: 25%;
-    margin: 0;
+    width: 25% !important;
+    margin: 0 !important;
 }
